# styx

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  DEVELOP.md  Justfile  README.md  README.md.in  dist-workspace.toml  pnpm-workspace.yaml  release-plz.toml
crates/facet-styx/: Cargo.toml  README.md  README.md.in
crates/facet-styx/examples/: dump_schema.rs  test_tag_payload.rs  test_tags.rs
crates/facet-styx/schema/: meta.styx
crates/facet-styx/src/: error.rs  figue_format.rs  idempotency_test.rs  lib.rs  other_variant_test.rs  parser.rs  schema_error.rs  schema_gen.rs  schema_meta.rs  schema_types.rs  schema_validate.rs  serializer.rs  tag_events_test.rs  tests.rs  tracing_macros.rs  value_expr_test.rs
crates/facet-styx/src/snapshots/: facet_styx__error__tests__invalid_scalar_diagnostic.snap  facet_styx__error__tests__missing_field_diagnostic.snap  facet_styx__error__tests__unknown_field_diagnostic.snap  facet_styx__tag_events_test__01_bare_at.snap  facet_styx__tag_events_test__02_unit_tag.snap  facet_styx__tag_events_test__03_tag_explicit_null.snap  facet_styx__tag_events_test__04_tag_sequence.snap  facet_styx__tag_events_test__05_tag_struct.snap  facet_styx__tag_events_test__06_nested_unit_tags.snap  facet_styx__tag_events_test__07_tag_struct_with_tag_value.snap  facet_styx__tag_events_test__09_field_struct_tag.snap  facet_styx__tag_events_test__10_sequence_unit_tags.snap  facet_styx__tag_events_test__11_deeply_nested.snap  facet_styx__tag_events_test__12_at_as_key.snap
crates/facet-styx/src/tests/: metadata.rs
crates/serde_styx/: Cargo.toml  README.md  README.md.in
crates/serde_styx/src/: de.rs  error.rs  lib.rs  ser.rs
crates/styx-cli/: Cargo.toml  README.md  README.md.in
crates/styx-cli/src/: main.rs
crates/styx-compat-tests/: Cargo.toml  README.md  README.md.in
crates/styx-compat-tests/src/: lib.rs
crates/styx-cst/: Cargo.toml  README.md  README.md.in
crates/styx-cst/src/: ast.rs  lib.rs  parser.rs  syntax_kind.rs
crates/styx-embed/: Cargo.toml  README.md  README.md.in
crates/styx-embed-macros/: Cargo.toml  README.md  README.md.in
crates/styx-embed-macros/src/: lib.rs
crates/styx-embed/examples/: from_file.rs  roundtrip.rs  test_schema.styx
crates/styx-embed/src/: lib.rs
crates/styx-ffi/: .gitignore  Cargo.toml  README.md  README.md.in  build.rs
crates/styx-ffi/examples/: example.c
crates/styx-ffi/include/: styx.h
crates/styx-format/: Cargo.toml  README.md  README.md.in
crates/styx-format/proptest-regressions/: cst_format.txt
crates/styx-format/src/: cst_format.rs  lib.rs  options.rs  scalar.rs  value_format.rs  writer.rs
crates/styx-format/src/fixtures/: dibs-extracted.styx
crates/styx-format/src/snapshots/: styx_format__cst_format__tests__complex_schema.snap  styx_format__cst_format__tests__dibs_extracted_schema.snap  styx_format__cst_format__tests__fmt_001_bare_scalar.snap  styx_format__cst_format__tests__fmt_002_quoted_scalar.snap  styx_format__cst_format__tests__fmt_003_raw_scalar.snap  styx_format__cst_format__tests__fmt_004_multiple_entries.snap  styx_format__cst_format__tests__fmt_005_unit_tag.snap  styx_format__cst_format__tests__fmt_006_simple_tag.snap  styx_format__cst_format__tests__fmt_007_tag_with_scalar_payload.snap  styx_format__cst_format__tests__fmt_008_nested_tags.snap  styx_format__cst_format__tests__fmt_009_deeply_nested_tags.snap  styx_format__cst_format__tests__fmt_010_path_syntax.snap  styx_format__cst_format__tests__fmt_011_empty_inline_object.snap  styx_format__cst_format__tests__fmt_012_single_entry_inline_object.snap  styx_format__cst_format__tests__fmt_013_multi_entry_inline_object.snap  styx_format__cst_format__tests__fmt_014_nested_inline_objects.snap  styx_format__cst_format__tests__fmt_015_inline_object_with_tags.snap  styx_format__cst_format__tests__fmt_016_tag_with_inline_object_payload.snap  styx_format__cst_format__tests__fmt_017_inline_object_no_commas.snap  styx_format__cst_format__tests__fmt_018_inline_object_mixed_separators.snap  styx_format__cst_format__tests__fmt_019_deeply_nested_inline.snap  styx_format__cst_format__tests__fmt_020_inline_with_unit_values.snap  (+104 more)
crates/styx-gen-go/: Cargo.toml  README.md  README.md.in
crates/styx-gen-go/src/: lib.rs  types.rs
crates/styx-lsp/: Cargo.toml  README.md  README.md.in  build.rs
crates/styx-lsp-ext/: Cargo.toml  README.md  README.md.in
crates/styx-lsp-ext/src/: lib.rs
crates/styx-lsp/src/: config.rs  extensions.rs  lib.rs  schema_hints.rs  schema_validation.rs  semantic_tokens.rs  server.rs
crates/styx-lsp/tests/: e2e_extension.rs  in_process.rs
crates/styx-parse/: Cargo.toml  README.md  README.md.in
crates/styx-parse/examples/: dump_lexemes.rs
crates/styx-parse/src/: event.rs  events.rs  lexer.rs  lib.rs  parser.rs
crates/styx-schema/: Cargo.toml
crates/styx-schema/schema/: meta.gen.styx  meta.styx
crates/styx-schema/src/: error.rs  generate.rs  lib.rs  types.rs  validate.rs
crates/styx-schema/tests/: validation.rs
crates/styx-tokenizer/: Cargo.toml  README.md  README.md.in
crates/styx-tokenizer/src/: lib.rs  span.rs  token.rs  tokenizer.rs
crates/styx-tree/: Cargo.toml  README.md  README.md.in
crates/styx-tree/src/: builder.rs  diagnostic.rs  lib.rs  tests.rs  value.rs
crates/styx-wasm/: Cargo.toml  README.md  README.md.in  package.json
crates/styx-wasm/pkg/: package.json  styx_wasm.d.ts  styx_wasm.js  styx_wasm_bg.wasm  styx_wasm_bg.wasm.d.ts
crates/styx-wasm/src/: lib.rs
crates/tree-sitter-styx/: .pnpmrc.json  Cargo.toml  Makefile  Package.swift  README.md  README.md.in  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
crates/tree-sitter-styx/queries/: highlights.scm  indents.scm
crates/tree-sitter-styx/src/: grammar.json  node-types.json  parser.c  scanner.c
docs/: spec.md  (+11 more)
implementations/styx-py/: pyproject.toml
implementations/styx-py/styx/: __init__.py  compliance.py  lexer.py  parser.py  types.py
implementations/styx-py/tests/: test_compliance.py
implementations/styx-webmd/: Cargo.toml
implementations/styx-webmd/src/: lib.rs
(+719 files in other folders)
