[workspace]
resolver = "3"
members = [
    "crates/*",
]
exclude = [
    "editors/zed-styx",
    "tools/styx-webmd",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/styx"

[workspace.dependencies]
# Error reporting
ariadne = "0.6"

# Facet crates
facet = { path = "../facet/facet" }
facet-args = { path = "../facet/facet-args" }
facet-core = { path = "../facet/facet-core" }
facet-format = { path = "../facet/facet-format" }
facet-reflect = { path = "../facet/facet-reflect" }
facet-testhelpers = { path = "../facet/facet-testhelpers" }
facet-value = { path = "../facet/facet-value" }

# Tracing
tracing = "0.1"

# Testing
insta = "1"
proptest = "1"

# Serialization
serde_json = "1"

# Internal crates
styx-parse = { path = "crates/styx-parse" }
styx-format = { path = "crates/styx-format" }
styx-tree = { path = "crates/styx-tree" }
styx-cst = { path = "crates/styx-cst" }
styx-lsp = { path = "crates/styx-lsp" }
styx-embed = { path = "crates/styx-embed" }
facet-styx = { path = "crates/facet-styx" }

# Optimize WASM builds for size
[profile.release.package.styx-wasm]
opt-level = "s"
