[workspace]
resolver = "3"
members = [
    "crates/*",
]
exclude = [
    "editors/zed-styx",
    "tools/styx-webmd",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/styx"

[workspace.dependencies]
# Error reporting
ariadne = "0.6"

# Facet crates
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-args = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-format = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-reflect = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-testhelpers = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-value = { git = "https://github.com/facet-rs/facet", branch = "main" }

# Tracing
tracing = "0.1"

# Testing
insta = "1"
proptest = "1"

# Serialization
serde_json = "1"

# Internal crates
styx-parse = { path = "crates/styx-parse" }
styx-format = { path = "crates/styx-format" }
styx-tree = { path = "crates/styx-tree" }
styx-cst = { path = "crates/styx-cst" }
styx-lsp = { path = "crates/styx-lsp" }
styx-embed = { path = "crates/styx-embed" }
facet-styx = { path = "crates/facet-styx" }

# Optimize WASM builds for size
[profile.release.package.styx-wasm]
opt-level = "s"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# # Patch to ensure all crates use the same facet version
# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-core = { path = "../facet/facet-core" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-format = { path = "../facet/facet-format" }
# facet-path = { path = "../facet/facet-path" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-value = { path = "../facet/facet-value" }
# facet-dessert = { path = "../facet/facet-dessert" }
# facet-solver = { path = "../facet/facet-solver" }
