[package]
name = "facet-styx"
version = "1.0.0"
edition.workspace = true
description = "Facet integration for the Styx configuration language"
license.workspace = true
repository.workspace = true

[dependencies]
facet-core.workspace = true
facet-format.workspace = true
facet-reflect.workspace = true
facet.workspace = true
styx-format.workspace = true
styx-parse.workspace = true
styx-tree.workspace = true
ariadne.workspace = true
serde_json.workspace = true

# Tracing (optional - compiles to nothing when disabled)
tracing = { workspace = true, optional = true }

[dev-dependencies]
tracing.workspace = true
facet-testhelpers.workspace = true
insta.workspace = true
facet-format = { workspace = true, features = ["tracing"] }
facet-reflect = { workspace = true, features = ["tracing"] }

[features]
tracing = ["dep:tracing", "facet-format/tracing", "facet-reflect/tracing"]
