[package]
name = "facet-styx"
version = "1.0.1"
edition.workspace = true
description = "Facet integration for the Styx configuration language"
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core.workspace = true
facet-format.workspace = true
facet-reflect.workspace = true
facet.workspace = true
styx-format.workspace = true
styx-parse.workspace = true
styx-tree.workspace = true
ariadne.workspace = true
serde_json.workspace = true

# Tracing (optional - compiles to nothing when disabled)
tracing = { workspace = true, optional = true }

# Figue integration (optional)
figue = { workspace = true, optional = true }

[dev-dependencies]
tracing.workspace = true
facet-testhelpers.workspace = true
insta.workspace = true
facet-format = { workspace = true, features = ["tracing"] }
facet-reflect = { workspace = true, features = ["tracing"] }
figue.workspace = true

[features]
tracing = ["dep:tracing", "facet-format/tracing", "facet-reflect/tracing"]
figue = ["dep:figue"]
