[package]
name = "serde_styx"
version = "0.1.0"
edition = "2024"
description = "Serde support for the Styx configuration language"
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0"
styx-format = { path = "../styx-format" }
styx-parse = { path = "../styx-parse" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
