[package]
name = "serde_styx"
version = "1.0.0"
edition.workspace = true
description = "Serde support for the Styx configuration language"
license.workspace = true
repository.workspace = true

[dependencies]
serde = "1.0"
styx-format.workspace = true
styx-parse.workspace = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
