[package]
name = "serde_styx"
version = "1.0.2"
edition.workspace = true
description = "Serde support for the Styx configuration language"
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
serde = "1.0"
styx-format.workspace = true
styx-parse.workspace = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
