[package]
name = "styx-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "styx"
path = "src/main.rs"

[dependencies]
styx-tree.workspace = true
styx-parse.workspace = true
styx-cst.workspace = true
styx-format.workspace = true
styx-schema.workspace = true
styx-lsp.workspace = true
styx-embed.workspace = true
facet-styx.workspace = true
facet.workspace = true
facet-args.workspace = true
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
which = "7"

[dev-dependencies]
