[package]
name = "styx-cli"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the Styx configuration language"
homepage = "https://styx.bearcove.eu"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "styx"
path = "src/main.rs"

[dependencies]
styx-tree.workspace = true
styx-parse.workspace = true
styx-cst.workspace = true
styx-format.workspace = true
styx-lsp.workspace = true
styx-embed.workspace = true
styx-gen-go.workspace = true
facet-styx.workspace = true
facet.workspace = true
facet-args.workspace = true
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
which = "7"

[dev-dependencies]
