[package]
name = "styx-embed-macros"
version = "1.0.2"
edition.workspace = true
description = "Proc macros for embedding Styx schemas in binaries"
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
proc-macro = true

[dependencies]
lz4_flex = "0.11"
blake3 = "1"
unsynn = "0.3"
proc-macro2 = "1"
styx-tree.workspace = true
