[package]
name = "styx-embed"
version = "0.1.0"
edition.workspace = true
description = "Embed Styx schemas in binaries for zero-execution discovery"
license.workspace = true
repository.workspace = true

[dependencies]
lz4_flex = "0.11"
blake3 = "1"
memmap2 = "0.9"
goblin = "0.9"
styx-embed-macros = { path = "../styx-embed-macros" }
