[package]
name = "styx-embed"
version = "1.0.2"
edition.workspace = true
description = "Embed Styx schemas in binaries for zero-execution discovery"
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
lz4_flex = "0.11"
blake3 = "1"
memmap2 = "0.9"
goblin = "0.9"
styx-embed-macros = { path = "../styx-embed-macros", version = "1.0" }
