[package]
name = "styx-ffi"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C bindings for the Styx configuration language parser"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
styx-tree.workspace = true

[build-dependencies]
cbindgen = "0.28"
