[package]
name = "styx-format"
version = "1.0.0"
edition.workspace = true
description = "Core formatting and parsing utilities for Styx"
license.workspace = true
repository.workspace = true

[dependencies]
styx-cst.workspace = true
styx-parse.workspace = true
styx-tree.workspace = true
rowan = "0.16"

# Tracing (optional - compiles to nothing when disabled)
tracing = { workspace = true, optional = true }

[dev-dependencies]
tracing.workspace = true
facet-testhelpers.workspace = true
insta = "1"
proptest.workspace = true

[features]
tracing = ["dep:tracing", "styx-parse/tracing"]
