[package]
name = "styx-format"
version = "1.0.1"
edition.workspace = true
description = "Core formatting and parsing utilities for Styx"
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
styx-cst.workspace = true
styx-parse.workspace = true
styx-tree.workspace = true

[dev-dependencies]
insta = "1"
proptest.workspace = true

[features]
