[package]
name = "styx-lsp"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language server for Styx configuration language"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Styx crates
styx-cst = { path = "../styx-cst" }
styx-tree = { path = "../styx-tree" }
styx-format = { path = "../styx-format" }
styx-embed = { path = "../styx-embed" }
facet-styx = { path = "../facet-styx" }

# Binary lookup
which = "7"

# Error handling
eyre = "0.6"

# Cache support
dirs = "6"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Schema hints
facet.workspace = true
glob = "0.3"
serde_json.workspace = true

# LSP extensions (roam RPC)
roam-stream = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-session = { git = "https://github.com/bearcove/roam", branch = "main" }

# Extension protocol
styx-lsp-ext = { path = "../styx-lsp-ext" }

# Testing
styx-lsp-test-schema = { path = "../styx-lsp-test-schema" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[build-dependencies]
facet.workspace = true
facet-styx = { path = "../facet-styx" }
