[package]
name = "styx-lsp"
version = "1.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language server for Styx configuration language"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Styx crates
styx-cst = { path = "../styx-cst", version = "1.0" }
styx-tree = { path = "../styx-tree", version = "1.0" }
styx-format = { path = "../styx-format", version = "1.0" }
styx-embed = { path = "../styx-embed", version = "1.0" }
facet-styx = { path = "../facet-styx", version = "1.0" }

# Binary lookup
which = "7"

# Error handling
eyre = "0.6"

# Cache support
dirs = "6"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Schema hints
facet.workspace = true
glob = "0.3"
serde_json.workspace = true

# LSP extensions (roam RPC)
roam-stream = { git = "https://github.com/bearcove/roam", branch = "main", version = "3" }
roam-session = { git = "https://github.com/bearcove/roam", branch = "main", version = "3" }

# Extension protocol
styx-lsp-ext = { path = "../styx-lsp-ext", version = "1.0" }

# Testing
styx-lsp-test-schema = { path = "../styx-lsp-test-schema", version = "1.0" }

[dev-dependencies]
serde_json.workspace = true

[build-dependencies]
facet.workspace = true
facet-styx = { path = "../facet-styx", version = "1.0" }
