[package]
name = "styx-parse"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Event-based parser for the Styx configuration language"
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
tracing = ["dep:tracing"]
facet = ["dep:facet"]

[dependencies]
facet = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tracing.workspace = true
facet-testhelpers.workspace = true
