[package]
name = "styx-parse"
version = "1.0.1"
edition.workspace = true
license.workspace = true
description = "Event-based parser for the Styx configuration language"
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
facet = ["dep:facet", "styx-tokenizer/facet"]

[dependencies]
facet = { workspace = true, optional = true }
tracing = { workspace = true }
styx-tokenizer = { workspace = true }

[dev-dependencies]
tracing.workspace = true
facet-testhelpers.workspace = true
styx-testhelpers.workspace = true
