[package]
name = "styx-tokenizer"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Tokenizer for the Styx configuration language"
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
facet = ["dep:facet"]

[dependencies]
facet = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
tracing.workspace = true
facet-testhelpers.workspace = true
