[package]
name = "styx-tree"
version = "1.0.0"
edition.workspace = true
description = "High-level syntax tree for the Styx configuration language"
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
facet = ["dep:facet", "styx-parse/facet"]

[dependencies]
styx-parse.workspace = true
ariadne = "0.6"
facet = { workspace = true, optional = true }

[dev-dependencies]
insta = "1.42"
facet.workspace = true
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-postcard = { git = "https://github.com/facet-rs/facet", branch = "main" }
