[package]
name = "styx-wasm"
version = "1.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for Styx parser"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde-wasm-bindgen = "0.6"

# Styx crates
styx-parse = { path = "../styx-parse", version = "1.0" }
styx-tree = { path = "../styx-tree", version = "1.0" }
styx-format = { path = "../styx-format", version = "1.0" }

[dev-dependencies]
